implemented verification of email api
